--- a/src/app/details/details.component.html
+++ b/src/app/details/details.component.html
@@ -20,11 +20,8 @@
           />
           <p class="text-muted mt-3">{{ data.description }}</p>
           <h4 class="text-danger fw-bold mt-3">{{ data.price }} SR</h4>
-          <button class="btn btn-outline-success btn-lg mt-3 w-100" (click)="increment()">
+          <button class="btn btn-outline-success btn-lg mt-3 w-100" (click)="addToCart()">
             <i class="fa fa-shopping-cart me-2"></i> Add to Cart
-          </button>
-          <button class="btn btn-outline-danger btn-lg mt-3 w-100" (click)="decrement()">
-            <i class="fa fa-shopping-cart me-2"></i> Remove from cart
           </button>
         </div>
       </div>
